Change style to Arial

--- a/themes/elsa/static/css/redlounge.css
+++ b/themes/elsa/static/css/redlounge.css
@@ -42,7 +42,7 @@ p a {
 h1 {
     /*    padding-top: 8px; */
     
-    font-family: 'Libre Baskerville', serif;
+    font-family: 'Arial', serif;
     font-weight: 700;
     font-size: 16pt;
 }
