--- a/themes/elsa/layouts/index.html
+++ b/themes/elsa/layouts/index.html
@@ -8,8 +8,8 @@
             {{ partial "listtop.html" . }}
 
           <div class="posts">
-            {{ range .Site.Recent }}
-               {{ if not .Params.nolist }}
+            {{ $Site := .Site }}
+            {{ range .Data.Pages }}
             <section  class="post">
                 <header class="post-header">
                     {{ if .Params.thumbnail }}
@@ -36,19 +36,22 @@
                 {{ if .Params.categories }}
                 <div class="post-categories">
                     {{ range .Params.categories }}
-                    <a class="post-category post-category-{{ . | urlize }}" href="/categories/{{ . | urlize }}">{{ . }}</a> 
+                    <a class="post-category post-category-{{ . | urlize }}" href="{{ $Site.BaseURL }}/categories/{{ . | urlize }}">{{ . }}</a>
                     {{ end }}
                 </div>
                 {{ end }}
             </p>
-            <article class="post-summary">
+            {{ if .Truncated  }}
+              <article class="post-summary">
                   {{ .Summary }}
               </article>
               <div class="read-more-link">
                   <a href="{{ .RelPermalink }}"><span class="read-more-slashes">//</span>Read More...</a>
               </div>
+            {{ else }}
+              {{ .Content }}
+            {{ end }}
           </section>
-          {{ end }}
           {{ end }}
         </div>
 
