--- a/themes/elsa/layouts/partials/authorsocial.html
+++ b/themes/elsa/layouts/partials/authorsocial.html
@@ -2,7 +2,7 @@
       <span class="post-author-social post-author-facebook"><a href="{{ .Params.authorfacebook }}" target="_blank"><i class="fa fa-facebook"></i></a></span>
 {{ end }}
 {{ if .Params.authorgoogleplus }}
-      <span class="post-author-social post-author-google-plus"><a href="{{ .Params.authorfacebook }}" target="_blank"><i class="fa fa-google-plus"></i></a></span>
+      <span class="post-author-social post-author-google-plus"><a href="{{ .Params.authorgoogleplus }}" target="_blank"><i class="fa fa-google-plus"></i></a></span>
 {{ end }}
 {{ if .Params.authorlinkedin }}
       <span class="post-author-social post-author-linkedin"><a href="{{ .Params.authorlinkedin }}" target="_blank"><i class="fa fa-linkedin"></i></a></span>
