--- a/themes/elsa/layouts/partials/sidebar.html
+++ b/themes/elsa/layouts/partials/sidebar.html
@@ -2,25 +2,27 @@
   <div class="header">
     {{ partial "sidebarheader.html" . }}
 
+	{{ if .Site.Params.sidebarphoto}}
+	  <img src="{{.Site.Params.sidebarphoto}}" class="sidebarphoto">
+	{{ end }}
+
+    {{ if .Site.Params.sidebartitle }}<h1 class="brand-title">{{ .Site.Params.sidebartitle }}</h1>{{ end }}
+    {{ if .Site.Params.sidebartagline }}<h2 class="brand-tagline">{{ .Site.Params.sidebartagline }}</h2>{{ end }}
+
     <nav class="nav">
       <ul class="nav-list">
-        <li class="nav-item"><span class="nav-item-separator">//</span><a href="{{ .Site.BaseUrl }}">Home</a></li>
+        <li class="nav-item"><span class="nav-item-separator">//</span><a href="{{ .Site.BaseURL }}">Home</a></li>
         {{ range .Site.Menus.main }}
-          <li class="nav-item"><span class="nav-item-separator">//</span><a href="{{ .Url }}">{{ .Name }}</a></li>
+          <li class="nav-item"><span class="nav-item-separator">//</span><a href="{{ .URL }}">{{ .Name }}</a></li>
         {{ end }}
       </ul>
     </nav>
 
-  <div class="title">
-    {{ if .Site.Params.sidebartitle }}<h1 class="brand-title">{{ .Site.Params.sidebartitle }}</h1>{{ end }}
-    {{ if .Site.Params.sidebartagline }}<h2 class="brand-tagline">{{ .Site.Params.sidebartagline }}</h2>{{ end }}
-  </div>
-
     {{ if .Site.Menus.social }}
     <div class="social-buttons">
       {{ range .Site.Menus.social }}
-        {{ if .Url }}
-        <a href="{{ .Url }}" target="_blank">{{ .Pre }}</a>
+        {{ if .URL }}
+        <a href="{{ .URL }}" target="_blank">{{ .Pre }}</a>
         {{ end }}
       {{ end }}
       
@@ -28,5 +30,4 @@
     {{ end }}
 
   </div>
-
 </div>
